--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4",
-    "@types/uuid": "^10.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.4",
     "uuid": "^10.0.0"
   }
